libipathverbs (1.2-1) unstable; urgency=low

  * New upstream release.
  * Switch to dpkg-source 3.0 (quilt) format.

 -- Roland Dreier <roland@digitalvampire.org>  Tue, 26 Apr 2011 12:41:37 -0700

libipathverbs (1.1-3) unstable; urgency=low

  * Fix debian/watch file to use new download URL.

 -- Roland Dreier <roland@digitalvampire.org>  Wed, 20 Apr 2011 11:33:29 -0700

libipathverbs (1.1-2) unstable; urgency=low

  * Update to Standards-Version: 3.8.2.
  * Move -dbg package to section debug.

 -- Roland Dreier <rolandd@cisco.com>  Thu, 25 Jun 2009 13:40:04 -0700

libipathverbs (1.1-1) unstable; urgency=low

  * Initial Release.  (Closes: #473875)

 -- Roland Dreier <rolandd@cisco.com>  Sun, 30 Mar 2008 09:27:38 -0700