@@ -2,7 +2,7 @@ Source: libipathverbs
 Priority: extra
 Maintainer: Roland Dreier <roland@digitalvampire.org>
 DM-Upload-Allowed: yes
-Build-Depends: @cdbs@, libibverbs-dev (>= 1.1)
+Build-Depends: autoconf, automake, libtool, debhelper (>= 7.0.50~), dpkg-dev (>= 1.13.19), libibverbs-dev (>= 1.1)
 Standards-Version: 3.8.2
 Section: libs
 Homepage: http://www.openfabrics.org/
