@@ -1,8 +1,18 @@
 #!/usr/bin/make -f
 # -*- mode: makefile; coding: utf-8 -*-
 
-DEB_DH_INSTALL_SOURCEDIR := debian/tmp
-DEB_AUTO_UPDATE_LIBTOOL := post
+%:
+	dh $@
 
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/autotools.mk
+override_dh_strip:
+	dh_strip --dbg-package=libipathverbs1-dbg
+
+override_dh_auto_configure:
+	aclocal --force
+	libtoolize --install --copy --force
+	autoconf --force
+	autoheader --force
+	automake --add-missing --copy --force-missing --foreign
+	dh_auto_configure
+
+override_dh_makeshlibs:
